# HMC-SNUH

./: .gitignore  .readthedocs.yml  1_experiment.ipynb  2_submission.ipynb  HMSDatasets.py  README.md  datasets.py  experiment.ipynb  huggingface_test.ipynb  loss.py  model.py  pyproject.toml  split_dataset.ipynb  train.py  train_old.py
Code/: 1d_2d_Multimodal_Approach.ipynb  2D_EfficientNet.ipynb
Code/Kaggle Notebooks/: efficientnetb0-pytorch-starter-lb-0-40.ipynb  efficientnetb0-starter-lb-0-43.ipynb  features-head-starter-lb-0-35.ipynb  training-multimodal-1d-2d-approach-eegs.ipynb
experiment_notebook/: experiment.ipynb
fold_dataset/: train_folds.csv
tests/: test_dataset.py
utils/: util.py
