[tool.poetry]
name = "hmc-snuh"
version = "0.1.0"
description = ""
authors = ["baruda <maider030@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
kaggle = "^1.6.6"
pandas = "^2.2.0"

[tool.poetry.dev-dependencies]
torch = {url = "https://download.pytorch.org/whl/cu121_pypi_cudnn/torch-2.1.0%2Bcu121.with.pypi.cudnn-cp310-cp310-linux_x86_64.whl#sha256=948aa4ce86a8644be7667a1f8b78de6bd5f3301f555dc57f72269fcc68c2fe19"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
