[tool.poetry]
name = "hmc-snuh"
version = "0.1.0"
description = ""
authors = ["baruda <maider030@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10,<3.11"
numpy = "^1.26.4"
kaggle = "^1.6.6"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
librosa = "^0.10.1"
albumentations = "^1.4.0"
hydra-core = "^1.3.2"
tsfm-public = {git = "https://github.com/IBM/tsfm.git"}
transformers = {git = "https://github.com/huggingface/transformers.git"}

[tool.poetry.dev-dependencies]
torch = {url = "https://download.pytorch.org/whl/cu121_pypi_cudnn/torch-2.1.0%2Bcu121.with.pypi.cudnn-cp310-cp310-linux_x86_64.whl#sha256=948aa4ce86a8644be7667a1f8b78de6bd5f3301f555dc57f72269fcc68c2fe19"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
